[package]
name = "accumulator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

accumulator = { git = "https://github.com/nomad-xyz/rust" }
primitive-types = "0.11.1"
ethers = "0.6.2"
clap = { version = "3.1.18", features = ["derive"] }
