[package]
name = "accumulator-cli"
version = "0.1.0"
edition = "2021"
description = "A cli wrapper around Nomad Accumulator, a library for Sparse Merkle Trees"
authors = ["Odysseas Lamtzidis <odysseas@nomad.xyz>"]
documentation = "https://github.com/nomad-xyz/rust/tree/main/accumulator"
repository = "https://github.com/odyslam/accumulator-cli"
license = "MIT"

[dependencies]

accumulator = { git = "https://github.com/nomad-xyz/rust" }
primitive-types = "0.11.1"
ethers = "0.6.2"
clap = { version = "3.1.18", features = ["derive"] }
rustc-hex = "2.1.0"
anyhow = "1.0.57"
